Address some trivial warnings and deprecations in two model test classes
Signed-off-by: Jakub Scholz <www@scholzj.com>